force-app/main/default/objects/Asset/fields/SerialNumberUniqueness__c.field-meta.xml
<CustomField>
    <fullName>SerialNumberUniqueness__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>TECH_SerialNumberUniqueness</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>