force-app/main/default/objects/Asset/fields/Sim_CCID__c.field-meta.xml
<CustomField>
    <fullName>Sim_CCID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIM CCID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>