force-app/main/default/objects/Asset/fields/Sim_IMSI__c.field-meta.xml
<CustomField>
    <fullName>Sim_IMSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIM IMSI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>