force-app/main/default/objects/Asset/fields/Son_audimetre__c.field-meta.xml
<CustomField>
    <fullName>Son_audimetre__c</fullName>
    <label>Son audimètre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optique</fullName>
            </value>
            <value>
                <fullName>RCA</fullName>
            </value>
            <value>
                <fullName>AV1</fullName>
            </value>
            <value>
                <fullName>AV2</fullName>
            </value>
            <value>
                <fullName>Intrusif</fullName>
            </value>
            <value>
                <fullName>Casque</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>