force-app/main/default/objects/Asset/fields/Statut_de_connexion__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_connexion__c</fullName>
    <label>Statut de connexion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>ConnectedCol</fullName>
            </value>
            <value>
                <fullName>ConnectedSup</fullName>
            </value>
            <value>
                <fullName>ConnectedExp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>