force-app/main/default/objects/Asset/fields/Statut_Google__c.field-meta.xml
<CustomField>
    <fullName>Statut_Google__c</fullName>
    <label>Statut Google</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Inactif</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>