force-app/main/default/objects/Asset/fields/Systeme_d_exploitation__c.field-meta.xml
<CustomField>
    <fullName>Systeme_d_exploitation__c</fullName>
    <label>Système d&apos;exploitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Androïd</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Linux</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>MAC OS</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Windows</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>Chrome</label>
            </value>
            <value>
                <fullName>MAC iOS</fullName>
                <isActive>false</isActive>
                <label>MAC iOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>