force-app/main/default/objects/Asset/fields/TECH_date_d_installation_comparaison__c.field-meta.xml
<CustomField>
    <fullName>TECH_date_d_installation_comparaison__c</fullName>
    <formula>IF( TODAY() &gt;  InstallDate + 1 ,  true,  false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH date d&apos;installation comparaison</label>
    <type>Checkbox</type>
</CustomField>