force-app/main/default/objects/Asset/fields/tech_isDeleted__c.field-meta.xml
<CustomField>
    <fullName>tech_isDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_isDeleted</label>
    <type>Checkbox</type>
</CustomField>