force-app/main/default/objects/Asset/fields/Transmetteur_video__c.field-meta.xml
<CustomField>
    <fullName>Transmetteur_video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transmetteur vidéo</label>
    <type>Checkbox</type>
</CustomField>