force-app/main/default/objects/Asset/fields/Tv_hd__c.field-meta.xml
<CustomField>
    <fullName>Tv_hd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TV HD</label>
    <type>Checkbox</type>
</CustomField>