force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ordinateur fixe</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ordinateur portable</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tablette</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Smartphone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>