force-app/main/default/objects/Asset/fields/Type_d_audimetre__c.field-meta.xml
<CustomField>
    <fullName>Type_d_audimetre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type d&apos;audimètre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>