force-app/main/default/objects/Asset/fields/Type_d_ecran__c.field-meta.xml
<CustomField>
    <fullName>Type_d_ecran__c</fullName>
    <label>Type d&apos;écran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Ecran LED</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ecran LCD</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Ecran Plasma</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Ne sait pas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>