force-app/main/default/objects/Asset/fields/Type_d_installation__c.field-meta.xml
<CustomField>
    <fullName>Type_d_installation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type d&apos;installation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>