force-app/main/default/objects/Asset/fields/Type_de_connexion_WIFI_uniquement__c.field-meta.xml
<CustomField>
    <fullName>Type_de_connexion_WIFI_uniquement__c</fullName>
    <label>Type de connexion (WIFI uniquement)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Par le Wi-Fi uniquement</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Par la 3G/4G uniquement</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Par le Wi-Fi et la 3G/4G</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Non connectée à Internet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>