force-app/main/default/objects/Asset/fields/Type_de_materiel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_materiel__c</fullName>
    <label>Type de Matériel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>31</fullName>
                <label>Beacon</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Routeur</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Soft Meter</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Pager</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Carte SIM</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Setmeter</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>DMD</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>TV</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>TV Plat</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>TV TNT intégré</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>TVM3</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>TNT</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MAG</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Syster</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Modem</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Tuner Externe</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Sonde NG</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Perte de marquage</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Ordinateur</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Console de jeux</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>DVD</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>DVD R sans HDD</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>DVD MAG</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Autre équipement</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Streaming Meter</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>Antenne</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>Connectique</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>Convertisseur</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>IRD</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>MCS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>