force-app/main/default/objects/Asset/fields/Type_de_panel_Old__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel_Old__c</fullName>
    <label>Type de panel Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panel TV (Médiamat)</fullName>
            </value>
            <value>
                <fullName>Panel Web (PaME)</fullName>
            </value>
            <value>
                <fullName>Panel AIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>