force-app/main/default/objects/Asset/fields/Type_de_transmetteur_video__c.field-meta.xml
<CustomField>
    <fullName>Type_de_transmetteur_video__c</fullName>
    <label>Type de transmetteur vidéo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Emetteur</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Recepteur</label>
            </value>
            <value>
                <fullName>Valeurs à fournir</fullName>
                <isActive>false</isActive>
                <label>Valeurs à fournir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>