force-app/main/default/objects/Asset/fields/Type_recherche__c.field-meta.xml
<CustomField>
    <fullName>Type_recherche__c</fullName>
    <label>Type recherche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMEI</fullName>
            </value>
            <value>
                <fullName>SN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>