force-app/main/default/objects/Asset/fields/Usage_principal__c.field-meta.xml
<CustomField>
    <fullName>Usage_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage principal</label>
    <type>Checkbox</type>
</CustomField>