force-app/main/default/objects/Asset/fields/Utilisateur_principal__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur principal</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Cet individu n&apos;existe pas dans la base de données ou ne fait pas partie de ce foyer.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Équipements</relationshipLabel>
    <relationshipName>Equipements</relationshipName>
    <type>Lookup</type>
</CustomField>