force-app/main/default/objects/Asset/fields/Version_de_l_OS__c.field-meta.xml
<CustomField>
    <fullName>Version_de_l_OS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version de l&apos;OS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>