force-app/main/default/objects/Asset/fields/Version_du_Logiciel__c.field-meta.xml
<CustomField>
    <fullName>Version_du_Logiciel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version du Logiciel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>