force-app/main/default/objects/Asset/fields/Version_du_produit__c.field-meta.xml
<CustomField>
    <fullName>Version_du_produit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version du produit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>