force-app/main/default/objects/Asset/fields/Video_projecteur__c.field-meta.xml
<CustomField>
    <fullName>Video_projecteur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vidéo-Projecteur</label>
    <type>Checkbox</type>
</CustomField>