force-app/main/default/objects/Asset/recordTypes/Accessoires.recordType-meta.xml
<RecordType>
    <fullName>Accessoires</fullName>
    <active>true</active>
    <label>Accessoires</label>
</RecordType>