force-app/main/default/objects/Asset/recordTypes/carte_SIM.recordType-meta.xml
<RecordType>
    <fullName>carte_SIM</fullName>
    <active>true</active>
    <label>carte SIM</label>
</RecordType>