force-app/main/default/objects/Asset/recordTypes/Dispositifs_de_mesure_d_audience_AIP.recordType-meta.xml
<RecordType>
    <fullName>Dispositifs_de_mesure_d_audience_AIP</fullName>
    <active>true</active>
    <label>Dispositifs de mesure d&apos;audience AIP</label>
</RecordType>