force-app/main/default/objects/Asset/recordTypes/Dispositifs_de_mesure_d_audience_MM_PaMe.recordType-meta.xml
<RecordType>
    <fullName>Dispositifs_de_mesure_d_audience_MM_PaMe</fullName>
    <active>true</active>
    <label>Dispositifs de mesure d&apos;audience MM / PaMe</label>
</RecordType>