force-app/main/default/objects/Asset/recordTypes/Peripherique.recordType-meta.xml
<RecordType>
    <fullName>Peripherique</fullName>
    <active>true</active>
    <label>Périphérique</label>
</RecordType>