force-app/main/default/objects/Asset/recordTypes/Poste.recordType-meta.xml
<RecordType>
    <fullName>Poste</fullName>
    <active>true</active>
    <label>Poste</label>
</RecordType>