force-app/main/default/objects/Asset/recordTypes/Routeur.recordType-meta.xml
<RecordType>
    <fullName>Routeur</fullName>
    <active>true</active>
    <label>Routeur</label>
</RecordType>