force-app/main/default/objects/Asset/recordTypes/Streaming_Meter.recordType-meta.xml
<RecordType>
    <fullName>Streaming_Meter</fullName>
    <active>true</active>
    <label>Streaming Meter</label>
</RecordType>