force-app/main/default/objects/Asset/validationRules/RV01_modif_nom_impossible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_modif_nom_impossible</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
$User.Username&lt;&gt;$Label.Mulesoft_integrationUser_username,
				NOT(ISNEW()),
				ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Vous ne pouvez pas modifier le nom d&apos;un équipement</errorMessage>
</ValidationRule>