force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>ASSET.RECORDTYPE</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Type_de_panel__c</columns>
    <columns>Ressource_de_service__c</columns>
    <columns>Id_audimetre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_d_audimetre__c</field>
        <operation>contains</operation>
        <value>STREAMING METER</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>IMS</value>
    </filters>
    <label>Tous les équipements de mesure</label>
</ListView>