force-app/main/default/objects/Asset/listViews/Cartes_SIM.listView-meta.xml
<ListView>
    <fullName>Cartes_SIM</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Type_de_panel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_materiel__c</field>
        <operation>equals</operation>
        <value>23</value>
    </filters>
    <label>Cartes SIM</label>
</ListView>