force-app/main/default/objects/Asset/listViews/Liste_des_beacons.listView-meta.xml
<ListView>
    <fullName>Liste_des_beacons</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Date_de_premiere_detection__c</columns>
    <columns>Date_de_derniere_detection__c</columns>
    <columns>Batterie__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.NAME</field>
        <operation>contains</operation>
        <value>beaco</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Cordon</value>
    </filters>
    <label>Liste des beacons</label>
</ListView>