force-app/main/default/objects/Asset/listViews/Liste_des_dockstations.listView-meta.xml
<ListView>
    <fullName>Liste_des_dockstations</fullName>
    <columns>Foyer_paneliste__c</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Date_de_premiere_installation__c</columns>
    <columns>Date_de_premiere_collecte_d_audience__c</columns>
    <columns>Date_d_affectation__c</columns>
    <columns>Date_de_desaffectation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Dispositifs_de_mesure_d_audience_AIP</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>v3</value>
    </filters>
    <label>Liste des ROAv3</label>
</ListView>