force-app/main/default/objects/Asset/listViews/Liste_des_routeurs.listView-meta.xml
<ListView>
    <fullName>Liste_des_routeurs</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Date_de_premiere_collecte_d_audience__c</columns>
    <columns>Date_de_premiere_installation__c</columns>
    <columns>Date_de_derniere_installation__c</columns>
    <columns>Ressource_de_service__c</columns>
    <filterScope>Everything</filterScope>
    <label>Liste des routeurs</label>
</ListView>