force-app/main/default/objects/Asset/listViews/Liste_des_set_meters.listView-meta.xml
<ListView>
    <fullName>Liste_des_set_meters</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Date_de_premiere_collecte_d_audience__c</columns>
    <columns>Date_de_premiere_installation__c</columns>
    <columns>Date_de_derniere_installation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.NAME</field>
        <operation>contains</operation>
        <value>meter</value>
    </filters>
    <label>Liste des set meters</label>
</ListView>