force-app/main/default/objects/Asset/listViews/Peripheriques.listView-meta.xml
<ListView>
    <fullName>Peripheriques</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>Type__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Dispositifs_de_mesure_d_audience_AIP</value>
    </filters>
    <label>Périphériques</label>
</ListView>