force-app/main/default/objects/Asset/listViews/Postes.listView-meta.xml
<ListView>
    <fullName>Postes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>Emplacement_tele__c</columns>
    <columns>Type_d_audimetre__c</columns>
    <columns>Audimetre_poste__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Poste</value>
    </filters>
    <label>Postes</label>
</ListView>